@@ -2,6 +2,7 @@ Release 1.2.5
   * Updated TOC for 3.2.2
   * Updated scaling factors for 3.2.2
   * Added Tailoring leg enchant (Issue 8)
+  * Fixed problem with Belt Buckle (Issue 7)
 
 Release 1.2.4 2009-08-29
   * Fixed Issue 2
